--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "fastify": "^4.9.2"
+    "@fastify/mysql": "^4.0.0",
+    "dotenv": "^16.0.3",
+    "fastify": "^4.9.2",
+    "fastify-plugin": "^4.3.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
