--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "@fastify/mysql": "^4.0.0",
+    "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
-    "fastify-plugin": "^4.3.0"
+    "fastify-plugin": "^4.3.0",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
