--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/xmldom": "^0.1.31",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
