--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
     "@fastify/mysql": "^4.0.0",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
