--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 APP_PORT=3000
 DB_HOST=localhost
-DB_NAME=binotify-rest
+DB_NAME=binotify_rest
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
+DATABASE_URL="mysql://root:password@localhost:3306/binotify_rest?schema=public"
