--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@fastify/mysql": "^4.0.0",
+    "@prisma/client": "^4.6.1",
     "axios": "^1.1.3",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
@@ -11,6 +12,7 @@
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@types/xmldom": "^0.1.31",
+    "prisma": "^4.6.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
