--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-APP_PORT=3000
-DB_HOST=localhost
-DB_NAME=binotify_rest
-DB_USERNAME=root
+APP_PORT=3001
+APP_HOST=0.0.0.0
+DB_HOST=host.docker.internal
+DB_NAME=binotify-rest
 DB_PASSWORD=password
-DATABASE_URL="mysql://root:password@localhost:3306/binotify_rest?schema=public"
+DB_USERNAME=root
+DB_PORT=3306
+DATABASE_URL=mysql://root:password@host.docker.internal:3306/binotify-rest
