--- a/.env
+++ b/.env
@@ -1,8 +1,15 @@
 APP_PORT=3001
-APP_HOST=0.0.0.0
 DB_HOST=host.docker.internal
+DB_HOST=localhost
 DB_NAME=binotify-rest
 DB_PASSWORD=password
 DB_USERNAME=root
 DB_PORT=3306
 DATABASE_URL=mysql://root:password@host.docker.internal:3306/binotify-rest
+JWT_SECRET_KEY = rjs_jwt_secret_key
+TOKEN_HEADER_KEY = rjs_token_header_key
+
+# Local
+# APP_HOST=localhost
+# DB_NAME=binotify_rest
+# DATABASE_URL="mysql://root:password@localhost:3306/binotify_rest?schema=public"
