--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
+  "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^8.2.0",
     "@fastify/mysql": "^4.0.0",
     "@prisma/client": "^4.6.1",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.9.2",
     "fastify-plugin": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
