--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ DB_PORT=3307
 DATABASE_URL="mysql://root:password@host.docker.internal:3307/binotify-rest?schema=public"
 JWT_SECRET_KEY = rjs_jwt_secret_key
 TOKEN_HEADER_KEY = rjs_token_header_key
+REDIS_URL=redis://redis:6379
