--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fastify": "^4.9.2",
     "fastify-plugin": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
+    "redis": "^4.5.1",
     "xmldom": "^0.6.0"
   },
   "devDependencies": {
