--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 APP_PORT=3002
 APP_HOST=0.0.0.0
+APP_ADDRESS=127.0.0.1:3002
 DB_HOST=host.docker.internal
 DB_NAME=binotify-rest
-DB_PASSWORD=password
 DB_USERNAME=root
+DB_PASSWORD=password
 DB_PORT=3307
 DATABASE_URL="mysql://root:password@host.docker.internal:3307/binotify-rest?schema=public"
 JWT_SECRET_KEY = rjs_jwt_secret_key
 TOKEN_HEADER_KEY = rjs_token_header_key
+BASE_SOAP_URL = "http://0.0.0.0:3003"
+SOAP_API_KEY = 'LcS0-SmJjjUoooMAKOANu_JdFij7AOb1kaFkNXuGVWY'
