--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ DB_USERNAME=root
 DB_PASSWORD=password
 DB_PORT=3307
 DATABASE_URL="mysql://root:password@host.docker.internal:3307/binotify-rest?schema=public"
-JWT_SECRET_KEY = rjs_jwt_secret_key
-TOKEN_HEADER_KEY = rjs_token_header_key
-BASE_SOAP_URL = "http://0.0.0.0:3003"
-SOAP_API_KEY = 'LcS0-SmJjjUoooMAKOANu_JdFij7AOb1kaFkNXuGVWY'
+JWT_SECRET_KEY=rjs_jwt_secret_key
+TOKEN_HEADER_KEY=rjs_token_header_key
+BASE_SOAP_URL=http://host.docker.internal:3003
+SOAP_API_KEY='LcS0-SmJjjUoooMAKOANu_JdFij7AOb1kaFkNXuGVWY'
 REDIS_URL=redis://redis:6379
